--- a/07_projects/index.html
+++ b/07_projects/index.html
@@ -15,7 +15,7 @@
     <main>
       <h1>Chai aur code</h1>
       <div class="projects">
-        <a class="project-link" href="./1-colorChanger/index.html"
+        <a class="project-link" href="./Project_1/color.html"
           >Project 1 - color Changer 🔥</a
         >
         <a class="project-link" href="./2-BMICalculator/index.html"
