--- a/07_projects/index.html
+++ b/07_projects/index.html
@@ -21,7 +21,7 @@
         <a class="project-link" href="./Project_2/BMI.html"
           >Project 2 - BMI Generator ☕️</a
         >
-        <a class="project-link" href="./3-DigitalClock/index.html"
+        <a class="project-link" href="./Project_3/clock.html"
           >Project 3 - Digital clock 😎</a
         >
         <a class="project-link" href="./4-GuessTheNumber/index.html"
